# bitpanda-transaction-explorer

./: LICENSE  README  README.md  bitpanda-webapp.html  index.html  proxy-server.py  pyproject.toml
openspec/changes/archive/2026-04-15-dashboard-by-coin-and-time/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-dashboard-by-coin-and-time/specs/dashboard-by-coin/: spec.md
openspec/changes/archive/2026-04-15-dashboard-by-coin-and-time/specs/dashboard-by-time/: spec.md
openspec/changes/archive/2026-04-15-dashboard-by-coin-and-time/specs/stats-filter-toggle/: spec.md
openspec/changes/archive/2026-04-15-stats-filter-all-tables/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-stats-filter-all-tables/specs/stats-filter-toggle/: spec.md
openspec/changes/archive/2026-04-15-toggle-stats-filter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-toggle-stats-filter/specs/stats-filter-toggle/: spec.md
openspec/specs/dashboard-by-coin/: spec.md
openspec/specs/dashboard-by-time/: spec.md
openspec/specs/stats-filter-toggle/: spec.md
