[tool.poetry]
name = "bitpanda-proxy"
version = "0.1.0"
description = "Local proxy server for Bitpanda API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.0"
requests = "^2.31.0"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"